# __fastapi_youtube_script__

./: .env.example  .gitignore  caption_VgpTwJ-snGw.srt  pyproject.toml  test_api.py  youtube_caption_api.py  zzz.py  zzz_ROADMAP.md
compose_local/: Dockerfile  docker-compose.yml  run.sh  run_sh.txt
compose_production/: Dockerfile  README.txt  railway.toml  start.sh  zzz_deploy_step.txt
